--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="./main.css">
+        <link rel="stylesheet" href="./styles/main.css">
         <title>RPG - Dragon Repeller</title>
     </head>
 
@@ -28,7 +28,7 @@
                 You are in the town square. Where do you want to go? Use the buttons above.
             </div>
         </div>
-        <script src="./logic.js"></script>
+        <script src="./scripts/logic.js"></script>
     </body>
 
 </html>
